[gd_scene load_steps=4 format=3 uid="uid://cw1rd3krffxa7"]

[ext_resource type="Script" path="res://scripts/menus/build_overlay.gd" id="1_2yxod"]
[ext_resource type="Texture2D" uid="uid://c6uyywjl7gvs4" path="res://Textures/buildings/guibg.png" id="2_6jmqm"]
[ext_resource type="Texture2D" uid="uid://277mmay2iia7" path="res://Textures/buildings/guibg2.png" id="3_th3lj"]

[node name="build_overlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 441.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2yxod")

[node name="scroll_bar" type="HScrollBar" parent="."]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 25.0
offset_top = 190.0
offset_right = 1125.0
offset_bottom = 200.0
max_value = 600.0

[node name="scrolled" type="Marker2D" parent="."]
position = Vector2(0, 122)

[node name="testing" type="Marker2D" parent="scrolled"]

[node name="test_building_1" type="Button" parent="scrolled/testing"]
offset_left = 32.0
offset_top = -60.0
offset_right = 163.0
offset_bottom = 60.0
focus_mode = 0
text = "test bulding 1"

[node name="test_building_2" type="Button" parent="scrolled/testing"]
offset_left = 172.0
offset_top = -60.0
offset_right = 303.0
offset_bottom = 60.0
focus_mode = 0
text = "test bulding 2"

[node name="backgroundOutline" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(576, 123)
scale = Vector2(0.96, 0.82)
texture = ExtResource("2_6jmqm")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 123)
scale = Vector2(0.96, 0.82)
texture = ExtResource("3_th3lj")

[node name="testing" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 41.0
focus_mode = 0
text = "testing"

[node name="boats" type="Button" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 10.0
offset_right = 192.0
offset_bottom = 41.0
focus_mode = 0
text = "boats
"

[node name="build_camera_check" type="CheckButton" parent="."]
layout_mode = 0
offset_top = -54.0
offset_right = 150.0
offset_bottom = -23.0
focus_mode = 0
text = "build camera"
flat = true

[connection signal="pressed" from="scrolled/testing/test_building_1" to="." method="_on_test_building_1_pressed"]
[connection signal="pressed" from="scrolled/testing/test_building_2" to="." method="_on_test_building_2_pressed"]
[connection signal="pressed" from="testing" to="." method="_on_testing_pressed"]
[connection signal="pressed" from="boats" to="." method="_on_boats_pressed"]
[connection signal="toggled" from="build_camera_check" to="." method="_on_build_camera_check_toggled"]
